# no-cap

./: .gitignore  README.md  hello.py  pyproject.toml
bsort/: __init__.py  cli.py  config.py
bsort/inference/: __init__.py  predictor.py  visualizer.py
bsort/training/: __init__.py  trainer.py
bsort/utils/: __init__.py  color_classifier.py
configs/: infer_config.yaml  training_config.yaml
scripts/: analyze_colors.py
tests/: __init__.py  test_cli.py  test_config.py  test_model_factory.py  test_utils.py  test_visualizer.py
